# approximate-model-counting

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Justfile  README.md  pyproject.toml
benchmarks/: README.md  download.py
benchmarks/custom/: backbone_unknown.cnf
bindings/: python_bindings.cpp
docs/: algorithms.md  architecture.md  development.md
notes/: lookahead-sat-solving.txt
src/: boolean_equivalence.cpp  boolean_equivalence.hpp  refinable_partition.cpp  refinable_partition.hpp  solution_information.cpp  solution_information.hpp  solution_table.cpp  solution_table.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp  variable_interaction_graph.cpp  variable_interaction_graph.hpp
src/approximate_model_counting/: __init__.py  _approximate_model_counting.pyi  cli.py  tui.py
tests/: __init__.py  _test_internals.pyi  strategies.py  test_backbone.py  test_boolean_equivalence.py  test_cli.py  test_coverage_data.py  test_decomposition.py  test_equivalence.py  test_generated_solution_table.py  test_internals.py  test_march_score.py  test_parse_dimacs.py  test_refinable_partition.py  test_solution_information.py  test_solution_table.py  test_solver.py  test_tui.py
tests/coverage_data/: backbone.cnf  backbone.json  empty.cnf  empty.json  equivalence.cnf  equivalence.json  invalid.txt  large_table.cnf  large_table.json  partition_split.cnf  partition_split.json  two_vars_sat.cnf  two_vars_sat.json  unit_negative.cnf  unit_negative.json  unit_positive.cnf  unit_positive.json  unsat_units.cnf  unsat_units.json
tests/cpp/: test_bitvector.cpp
tools/: analyze_benchmarks.py  analyze_cnf.cpp  test_backbone_unknown.cpp  test_initial_unknown.cpp  test_table_unknown.cpp
