[project]
name = "approximate_model_counting"
version = "0.1.0"
description = "Approximate model counting for SAT using Monte Carlo methods"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
amc = "approximate_model_counting.cli:main"

[project.optional-dependencies]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "ruff>=0.6.0",
    "basedpyright>=1.20.0",
    "scikit-build-core>=0.10.0",
    "pybind11>=2.13.0",
    "pytest-textual-snapshot>=1.0.0",
    "shrinkray @ git+https://github.com/DRMacIver/shrinkray.git",
]

[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
build.verbose = true
wheel.packages = ["src/approximate_model_counting"]

[tool.scikit-build.cmake.define]
ENABLE_COVERAGE = {env = "ENABLE_COVERAGE", default = "OFF"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
branch = true
source = ["approximate_model_counting"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["approximate_model_counting"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["build", ".venv"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
